# ASkit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
ASkit/: preprocessing.py
ASkit/resources/: phecode_exclude.parquet  phecode_rollup_map.parquet
src/askit/: main.py
src/askit/mas/: analysis.py  cli.py  config.py  models.py  pipeline.py  postprocessing.py  preprocessing.py
src/askit/run_study/: analysis.py  cli.py  config.py  constants.py  models.py  pipeline.py  postprocessing.py  preprocessing.py
src/resources/: phecode_definitions1.2.parquet  phecode_definitionsX.parquet  phecode_map.parquet  sex_restriction.parquet
tests/: conftest.py
tests/fixtures/: sample_study.csv
tests/mas/: test_mas.sh
tests/run_study/: test_run_study.sh
tests/unit/: test_analysis.py  test_cli.py  test_config.py  test_postprocessing.py  test_preprocessing.py
