[project]
name = "askit"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "idinsmore1", email = "irdinsmore1@geisinger.edu" },
    { name = "jzlou", email = "jzlou@geisinger.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.3",
    "pandas>=3.0.0",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
]
