[project]
name = "askit"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "idinsmore1", email = "irdinsmore1@geisinger.edu" },
    { name = "jzlou", email = "jzlou@geisinger.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "firthmodels>=0.7.1",
    "joblib>=1.5.3",
    "pandas>=3.0.0",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
]

[project.scripts]
askit = "askit.main:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 88
exclude=[
    ".eggs",
    ".git",
    ".vscode",
    "__pycache__",
    "build",
    "dist"
]

[tool.ruff.lint]
select = ["I", "F", "E", "W"]

[tool.mypy]
ignore_missing_imports = true
