[project]
name = "ASkit"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "idinsmore1", email = "irdinsmore1@geisinger.edu" },
    { name = "jzluo", email = "jzluo1@geisinger.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "firthmodels>=0.7.1",
    "joblib>=1.5.3",
    "loguru>=0.7.3",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.7",
    "statsmodels>=0.14.6",
]

[project.scripts]
askit = "askit.main:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyterlab>=4.5.3",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 88
exclude=[
    ".eggs",
    ".git",
    ".vscode",
    "__pycache__",
    "build",
    "dist"
]

[tool.ruff.lint]
select = ["I", "F", "E", "W"]

[tool.mypy]
ignore_missing_imports = true
